--- a/StretchyHeaders2/Base.lproj/Main.storyboard
+++ b/StretchyHeaders2/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="StretchyHeaders2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,69 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="by5-vx-AJJ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7nc-VO-gtY">
+                                        <rect key="frame" x="304" y="19" width="71" height="37"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="37" id="l2i-LU-9fO"/>
+                                            <constraint firstAttribute="width" constant="71" id="wGU-Qa-bUS"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                        <state key="normal" title="+"/>
+                                        <connections>
+                                            <action selector="extendButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="erq-SO-riC"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="Uaz-WP-pRo"/>
+                                    <constraint firstItem="7nc-VO-gtY" firstAttribute="top" secondItem="by5-vx-AJJ" secondAttribute="top" constant="19" id="YXn-zI-OwH"/>
+                                    <constraint firstAttribute="trailing" secondItem="7nc-VO-gtY" secondAttribute="trailing" id="j6d-Q4-2Je"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xzk-lf-F7e">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellID" id="e3L-gf-xcl">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e3L-gf-xcl" id="6gi-ig-0EF">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="DNb-eB-6Rk"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ySq-Su-uj9"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="by5-vx-AJJ" firstAttribute="trailing" secondItem="xzk-lf-F7e" secondAttribute="trailing" id="FLz-9n-dP9"/>
+                            <constraint firstItem="by5-vx-AJJ" firstAttribute="leading" secondItem="xzk-lf-F7e" secondAttribute="leading" id="LX8-2O-tnm"/>
+                            <constraint firstItem="xzk-lf-F7e" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="ZWD-QN-MP9"/>
+                            <constraint firstItem="by5-vx-AJJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="fQF-v7-Vhr"/>
+                            <constraint firstAttribute="trailing" secondItem="by5-vx-AJJ" secondAttribute="trailing" id="kEz-Pr-2GP"/>
+                            <constraint firstItem="by5-vx-AJJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uoO-dX-rZC"/>
+                            <constraint firstItem="xzk-lf-F7e" firstAttribute="top" secondItem="by5-vx-AJJ" secondAttribute="bottom" id="vEs-HS-A0B"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="button" destination="7nc-VO-gtY" id="Rzs-6z-bja"/>
+                        <outlet property="heightConstraint" destination="Uaz-WP-pRo" id="hvs-t8-Osd"/>
+                        <outlet property="navBarView" destination="by5-vx-AJJ" id="aCf-Yq-Aoq"/>
+                        <outlet property="tableView" destination="xzk-lf-F7e" id="zP7-Bq-n97"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="280.80000000000001" y="157.87106446776613"/>
         </scene>
     </scenes>
 </document>
